@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2006-2009  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2006-2011  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -119,6 +119,7 @@ DEVICE_ACCESS(dreamcast_asic)
 	if (r == 3) {
 		fatal("[ dreamcast_asic: Bad address ]\n");
 		r = 0;
+		exit(1);	// TODO?
 	}
 
 	switch (relative_addr) {
